# picodiff

./: CMakeLists.txt  README.md  main.cpp
src/: autograd.cpp  autograd.h  ops.cpp
